--- a/basket/templates/basket/button.html
+++ b/basket/templates/basket/button.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 <div class="add-to-basket">
 	<div class="basket-button">
 		<a href="#" onclick="return basket.add(this, {{ content_type.id }}, {{ object.id }});">
-			Добавить в корзину
+			{% trans 'Add to basket' %}
 		</a>
 	</div>
-	<div class="basket-added" style="display: none;">Товар добавлен в корзину</div>
+	<div class="basket-added" style="display: none;">{% trans 'Added to basket' %}</div>
 </div>
