--- a/basket/templates/basket/summary.html
+++ b/basket/templates/basket/summary.html
@@ -1,11 +1,12 @@
 {% load i18n pytils_numeral %}
-{% if order.empty %}
-    <p>{% trans 'Basket is empty' %}</p>
-{% else %}
+
+{% if request.order and not request.order.empty %}
     <p>
-    {% blocktrans with order.goods as items and order.summary as price and order.goods|choose_plural:"item1, items2, items5" as pluarized_items%}
+    {% blocktrans with request.order.goods as items and request.order.summary as price and request.order.goods|choose_plural:"item1, items2, items5" as pluarized_items %}
     {{ items }} {{ pluarized_items }} in basket. Total cost {{ price }}
     {% endblocktrans %}
     </p>
     <a href="{% url basket %}" title="{% trans 'Submit order' %}">{% trans 'Go to basket page' %}</a></p>
+{% else %}
+    <p>{% trans 'Basket is empty' %}</p>
 {% endif %}
