Added translation strings to templates

--- a/basket/templates/basket/confirm.html
+++ b/basket/templates/basket/confirm.html
@@ -1,15 +1,16 @@
 {% extends "basket/base.html" %}
+{% load i18n %}
 
-{% block title %}Оформление заказа{% endblock title %}
-{% block content_title %}Оформление заказа{% endblock content_title %}
+{% block title %}{% trans 'Checkout' %}{% endblock title %}
 
 {% block content %}
     <form action="." method="post">
 	<table>
 		{{ form }}
+        {% csrf_token %}
 		<tr><td colspan="2">
-			<input type="button" class="submit" value="Назад" onclick="document.location = '{% url basket %}';"/>
-			<input type="submit" class="submit" value="Заказать" />
+			<input type="button" class="submit" value="{% trans 'Back' %}" onclick="document.location = '{% url basket %}';"/>
+			<input type="submit" class="submit" value="{% trans 'Submit' %}" />
 		</td></tr>
 	</table>
     </form>
