--- a/basket/templates/basket/panel.html
+++ b/basket/templates/basket/panel.html
@@ -28,6 +28,6 @@ $(document).ready(function(){
 //-->
 </script>
 <div id="basket-panel">
-    <div id="basket-is-loading" style="display: none;"><img src="/media/basket/img/ajax-loader.gif" /></div>
+    <div id="basket-is-loading" style="display: none;"><img src="{{ STATIC_URL }}/basket/img/ajax-loader.gif" /></div>
     <div id="basket-summary">{% include 'basket/summary.html' %}</div>
 </div>
