--- a/basket/templates/admin/basket/order/change_form.html
+++ b/basket/templates/admin/basket/order/change_form.html
@@ -22,15 +22,13 @@
 
 {% block after_field_sets %}
 <fieldset class="module aligned">
-  <h2><div class="description">Онлайн-заказ #<strong>{{ original.id }}<strong></div></h2>
-  <h3><div>Дата заказа: {{ original.orderinfo.registered|date:"d/m/y" }}</div>
-  <div>Время заказа: {{ original.orderinfo.registered|time:"H:i" }}</div></h3>
+  <h2><div class="description">{% trans 'Online order' %}#<strong>{{ original.id }}<strong></div></h2>
     <table>
     <th>№</th>
-    <th>Наименование</th>
-    <th>Количество</th>
-    <th>Цена</th>
-    <th>Сумма</th>
+    <th>{% trans 'Item name' %}</th>
+    <th>{% trans 'Quantity' %}</th>
+    <th>{% trans 'Price' %}</th>
+    <th>{% trans 'Total' %}</th>
     {% for item in original.items.all %}
       <tr>
       <td>{{ forloop.counter }}</td>
@@ -42,12 +40,12 @@
     {% endfor %}
     </table>
       <div class="form-row">
-      <h3>Сумма заказа: {{ original.price }}<br/> Количество товаров: {{ original.goods }}</h3>
+      <h3>{% trans 'Order price' %}: {{ original.price }}<br/> {% trans 'Items quantity' %}: {{ original.goods }}</h3>
       </div>
       {% if original.user %}
 	      <div class="form-row">
-	        <div>ID пользователя: {{ original.user.id }}</div>
-	        <a href='../?q={{ original.user.username }}'>История заказов</a>
+	        <div>{% trans 'User id' %}: {{ original.user.id }}</div>
+	        <a href='../?q={{ original.user.username }}'>{% trans 'Shopping history' %}</a>
 	      </div>
       {% endif %}
 </fieldset>
