--- a/basket/templates/basket/button/simple.html
+++ b/basket/templates/basket/button/simple.html
@@ -1,4 +1,6 @@
 {% load i18n %}
-<form action="#">
-<button onclick="return basket.submit(this, {{ content_type.id }}), {{ instance.id }}" >{% trans 'Add to basket' %}(simple)</button>
+<form action="{% url add_to_basket %}" method="POST">
+{{ form }}
+<input type="submit" value="{% trans 'Add to basket' %}"/>
 </form>
+ 
