button template edited accordig to tag options

--- a/basket/templates/basket/button.html
+++ b/basket/templates/basket/button.html
@@ -1,9 +1,13 @@
-{% load i18n %}
 <div class="add-to-basket">
+	{% if already_in %}
+		<div class="already-in-basket">
+			{{ already_in_text }}
+		</div>
+	{% endif %}
 	<div class="basket-button">
 		<a href="#" onclick="return basket.add(this, {{ content_type.id }}, {{ object.id }});">
-			{% trans 'Add to basket' %}
+			{{ button_text }}
 		</a>
 	</div>
-	<div class="basket-added" style="display: none;">{% trans 'Added to basket' %}</div>
+	<div class="basket-added" style="display: none;">{{ added_text }}</div>
 </div>
